--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.world_clock">
    <application
-        android:label="world_clock"
+        android:label="World Clock"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
