--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   analog_clock: ^0.1.0
+  concentric_transition: ^1.0.3
 
 dev_dependencies:
   flutter_test:
